<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Multiple language Support</string>
    <string name="hi">Hi</string>
    <string name="school">School</string>
    <string name="simple_project">Simple Project</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="next_screen">Next Screen</string>

    <string name="settings">Settings</string>
    <string name="back">Back</string>


</resources>